# StateMachine

./: AppUserEvents.cpp  AppUserEvents.h  CMakeLists.txt  MainControl.cpp  MainControl.h  README.md  XIcons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Tests/: BasicsTests.cpp  CMakeLists.txt  ChildTests.cpp  EndingTests.cpp  HistoryTests.cpp  OrphanTests.cpp  ReturnTests.cpp
libCommon/: CMakeLists.txt  Common_glob.h  IApplicationPage.h  MultiStateAction.cpp  MultiStateAction.h
libGUI/: ActionButton.cpp  ActionButton.h  CMakeLists.txt  ToolBar.cpp  ToolBar.h  ToolBar.ui
libService/: CMakeLists.txt  PluginHandler.cpp  PluginHandler.h  ValueManager.cpp  ValueManager.h  ValueModel.cpp  ValueModel.h
libStateMachine/: CMakeLists.txt  EndingState.cpp  EndingState.h  HistoryState.cpp  HistoryState.h  HistoryStateTransition.cpp  HistoryStateTransition.h  OrphanState.cpp  OrphanState.h  ReturnState.cpp  ReturnState.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  StateTransition.cpp  StateTransition.h
pluginA/: CMakeLists.txt  PluginA.cpp  PluginA.h  PluginA_glob.h  XIcons.qrc
pluginB/: CMakeLists.txt  PluginB.cpp  PluginB.h  PluginB_glob.h  XIcons.qrc
